WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
220839
[WebAuthn] No error is visible after user enters the incorrect PIN
https://bugs.webkit.org/show_bug.cgi?id=220839
Summary
[WebAuthn] No error is visible after user enters the incorrect PIN
Jiewen Tan
Reported
2021-01-21 18:44:17 PST
When entering an incorrect PIN for a security key, the “incorrect PIN” error message gets flashed very briefly on screen before being dismissed and replaced with the original PIN entry view.
Attachments
Patch
(3.37 KB, patch)
2021-01-21 18:48 PST
,
Jiewen Tan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jiewen Tan
Comment 1
2021-01-21 18:44:27 PST
<
rdar://problem/73378319
>
Jiewen Tan
Comment 2
2021-01-21 18:48:47 PST
Created
attachment 418104
[details]
Patch
Brent Fulgham
Comment 3
2021-01-22 11:54:38 PST
Comment on
attachment 418104
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=418104&action=review
r=me
> Source/WebKit/UIProcess/WebAuthentication/Cocoa/AuthenticatorPresenterCoordinator.mm:159 > + if (m_presentedPIN)
You might want to add a logging message so we can debug failed PIN cases in the future.
Jiewen Tan
Comment 4
2021-01-22 12:00:37 PST
Comment on
attachment 418104
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=418104&action=review
Thanks Brent for r+ this patch.
>> Source/WebKit/UIProcess/WebAuthentication/Cocoa/AuthenticatorPresenterCoordinator.mm:159 >> + if (m_presentedPIN) > > You might want to add a logging message so we can debug failed PIN cases in the future.
Good idea! Not sure if this is the good place. I think I have some logging in the caller site.
EWS
Comment 5
2021-01-22 12:04:11 PST
Committed
r271754
: <
https://trac.webkit.org/changeset/271754
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 418104
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug